@@ -1216,9 +1216,6 @@ EOF
       # The directory will be created by InnoSetup with a [Dirs] statement
       return if Ocran.inno_script
 
-      # To create intermediate directories, perform a recursive call
-      mkdir(path.dirname)
-
       write_opcode(OP_CREATE_DIRECTORY)
       write_string(path.to_native)
     end
@@ -1237,7 +1234,6 @@ EOF
       # InnoSetup will install the file with a [Files] statement
       return if Ocran.inno_script
 
-      mkdir(tgt.dirname)
       Ocran.verbose_msg "a #{show_path tgt}"
       src = Ocran.Pathname(src)
       write_opcode(OP_CREATE_FILE)
