@@ -2,6 +2,7 @@
 - At startup, OCRAN no longer automatically removes directories that were previously deployed but couldn't be deleted. This change has been made to enhance security by preventing processes other than the startup process from manipulating temporary files created by them.
 - The ability for the stub to launch any script during the unpacking of application files has been removed. This feature was not in use.
 - The exit code from the Ruby application is now returned when the stub is terminated.
+- The packed data no longer contains redundant directory information.
 
 === 1.3.15
 - Support for Ruby 2.6 and above.
